@@ -20,10 +20,11 @@ dependencies {
 }
 
 jmh {
-    jvmArgs = listOf("--sun-misc-unsafe-memory-access=allow")
+    jvmArgs = listOf()
     fork = 1
     warmupIterations = 2
     iterations = 2
     timeOnIteration = "5s"
+
 
 }
